// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interpolation 1`] = `
Array [
  Object {
    "identifier": null,
    "key": "测试",
    "loc": Object {
      "column": 19,
      "line": 1,
    },
    "tags": null,
  },
]
`;

exports[`multiple lines with props 1`] = `
Array [
  Object {
    "identifier": null,
    "key": "测试",
    "loc": Object {
      "column": 17,
      "line": 3,
    },
    "tags": null,
  },
]
`;

exports[`prop with object value 1`] = `
Array [
  Object {
    "identifier": null,
    "key": "测试",
    "loc": Object {
      "column": 24,
      "line": 1,
    },
    "tags": null,
  },
]
`;

exports[`pug template 1`] = `
Array [
  Object {
    "identifier": null,
    "key": "测试",
    "loc": Object {
      "column": 25,
      "line": 1,
    },
    "tags": null,
  },
]
`;

exports[`script 1`] = `
Array [
  Object {
    "identifier": null,
    "key": "测试",
    "loc": Object {
      "column": 19,
      "line": 1,
    },
    "tags": null,
  },
]
`;

exports[`script setup 1`] = `
Array [
  Object {
    "identifier": null,
    "key": "测试",
    "loc": Object {
      "column": 25,
      "line": 1,
    },
    "tags": null,
  },
]
`;

exports[`static template 1`] = `
Array [
  Object {
    "identifier": null,
    "key": "测试",
    "loc": Object {
      "column": 15,
      "line": 1,
    },
    "tags": null,
  },
]
`;

exports[`template with expression props 1`] = `
Array [
  Object {
    "identifier": null,
    "key": "测试",
    "loc": Object {
      "column": 20,
      "line": 1,
    },
    "tags": null,
  },
]
`;

exports[`template with newline 1`] = `
Array [
  Object {
    "identifier": null,
    "key": "测试",
    "loc": Object {
      "column": 13,
      "line": 2,
    },
    "tags": null,
  },
]
`;

exports[`template with props 1`] = `
Array [
  Object {
    "identifier": null,
    "key": "测试",
    "loc": Object {
      "column": 18,
      "line": 1,
    },
    "tags": null,
  },
]
`;
